# rasputin

./: LICENSE  README.md  pyproject.toml
benchmark/: generate_test_data.py  run_benchmark.py  stress_test_failover.py  test_data.json
benchmark/results/: all_results.json  gemini-25-flash.json  gemini-25-flash_summary.md  gemini-25-pro.json  gemini-25-pro_summary.md  gemini-3-flash.json  gemini-3-flash_summary.md  gemini-3-pro.json  gemini-3-pro_summary.md  gemini-flash.json  gemini-flash_summary.md  qwen-72b.json  qwen-72b_summary.md  qwen-coder-30b.json  qwen-coder-30b_summary.md  sonnet-46-no-thinking.json  sonnet-46-no-thinking_summary.md  stress_test.json
hydra/: .gitignore  README.md
paper/: benchmark_results.json  cartu_method.tex  compaction_paper.md  compaction_quality_analysis.md  summary_opus_46.md  summary_sonnet_46.md
posts/: hydra-pipeline.md  openclaw-discussion.md  reddit-ai-agents.md  reddit-claudeai.md  reddit-claudecode.md  reddit-localllama.md
src/cartu_method/: __init__.py
website/: index.html  script.js
